--- a/style.css
+++ b/style.css
@@ -16,8 +16,14 @@ body {
   justify-content: center;
   align-items: center;
   min-height: 90vh;
-  grid-template-columns: repeat(4, 80px);
+  grid-template-columns: repeat(4, 100px);
   grid-template-rows: minmax(120px, auto) repeat(5, 100px);
+}
+@media (max-width: 500px) {
+  .calculator-grid {
+    grid-template-columns: repeat(4, 70px);
+    grid-template-rows: minmax(90px, auto) repeat(5, 80px);
+  }
 }
 
 .calculator-grid > button {
